# flask-training-app

./: .gitignore  README.md  docker-compose.yml
backend/: .Dockerfile  pyproject.toml
backend/scripts/: entrypoint.sh
backend/src/: apis.py  asgi.py  crud.py  db.py  exceptions.py  main.py  models.py
backend/src/apis/: __init__.py  reviews.py  users.py
backend/src/tests/: conftest.py  test_users_api.py
