[tool.poetry]
name = "flask-training"
version = "0.1.0"
description = ""
authors = ["Carlos Fernandes <carlos.vinicius.fernandes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
uvicorn = "^0.30.1"
beanie = "^1.26.0"
pydantic = "^2.7.4"
asgiref = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
